[metadata]
name = RichConsole
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/RichConsole
description = A library to input rich text into console
long_description = file: README.md
keywords = color, ANSI, rich text, formatting
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing

[options]
zip_safe = True
py_modules = RichConsole
setup_requires = setuptools_scm;
test_suite = tests.tests.Tests

[options.extras_require]
colorama colors = colorama
plumbum colors = plumbum
colored colors = colored
